MODIFICADO RAMA CONFLICTO

--- a/demo.html
+++ b/demo.html
@@ -37,7 +37,7 @@ document.getElementsByTagName( 'head' )<0>.appendChild( link );
 </p>
 </section>
 <section>
-<h2>Hello There</h2>
+<h2>MODIFICADO CONFLICTO</h2>
 <p>reveal.js  enables  you  to  create  beautiful  interactive  slide  decks  using 
 HTML. This presentation will show you examples of what it can do.
 </p>
